💄 (develop) Moved search and filter bar into own component

--- a/src/styles/SearchFilter.css
+++ b/src/styles/SearchFilter.css
@@ -34,3 +34,13 @@ li{
     padding:5px;
     margin:3px;
 }
+
+.SearchBar{
+    padding:3px;
+    align-items: center;
+}
+  
+.SearchBar input,select{
+    padding:3px;
+    margin:3px;
+}
