--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,13 +1,13 @@
-.App {
-  text-align: center;
-}
-
 .App-header {
   background-color: #282c34;
   display: flex;
   flex-direction: row;
-  /* align-items: center;
-  justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-left: 5px;
+  width: 100vw;
+}
+
+.App {
+  padding-left: 10;
 }
