--- a/src/styles/Employee.css
+++ b/src/styles/Employee.css
@@ -1,10 +1,3 @@
-.Employees span{
-    text-align: justify;
-    border-radius: 10px;
-    padding: 4px;
-    width: 100px;
-}
-
 .role-Manager {
     color:white;
     background-color: brown;
@@ -21,16 +14,16 @@
 }
 
 .Role{
-    float:left
+    float:left;
 }
 
 ul{
-    text-align: center;
+    padding-left: 5px;
     list-style-type: none;
 }
 
 li{
-    height: 20px;
-    padding:5px;
+    height: 35px;
+    padding:2px;
     margin:3px;
 }
