--- a/src/styles/Component.css
+++ b/src/styles/Component.css
@@ -31,7 +31,8 @@ span{
 }
 
 .titleText{
-    font-size:20px;
+    font-size:22px;
     font-weight: bold;
+    padding:4;
     padding-left: 10px
 }
